--- a/client/package.json
+++ b/client/package.json
@@ -29,5 +29,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3001"
+  "proxy": "http://localhost:3001",
+  "devDependencies": {
+    "react-edit-inline": "^1.0.8"
+  }
 }
